# livestock_subsidy_scraper

./: .gitignore  Cargo.toml
output/: programs_Alabama.tsv  programs_Alaska.tsv  programs_Arkansas.tsv  programs_California.tsv  programs_Colorado.tsv  programs_Connecticut.tsv  programs_Delaware.tsv  programs_Idaho.tsv  programs_Illinois.tsv  programs_Indiana.tsv  programs_Kansas.tsv  programs_Maryland.tsv  programs_Massachusetts.tsv  programs_Nevada.tsv  programs_New Hampshire.tsv  programs_New Jersey.tsv  programs_New York.tsv  programs_North Carolina.tsv  programs_Ohio.tsv  programs_South Carolina.tsv  programs_South Dakota.tsv  programs_Texas.tsv  programs_Utah.tsv  programs_Vermont.tsv  programs_Washington.tsv  programs_Wisconsin.tsv  programs_Wyoming.tsv  year_Alabama.tsv  year_Arizona.tsv  year_California.tsv  year_Connecticut.tsv  year_Florida.tsv  year_Iowa.tsv  year_Kansas.tsv  year_Louisiana.tsv  year_Maine.tsv  year_Massachusetts.tsv  year_Minnesota.tsv  year_Mississippi.tsv  year_Montana.tsv  (+12 more)
programs/: programs_Arizona.tsv  programs_Florida.tsv  programs_Georgia.tsv  programs_Hawaii.tsv  programs_Iowa.tsv  programs_Kentucky.tsv  programs_Louisiana.tsv  programs_Maine.tsv  programs_Michigan.tsv  programs_Minnesota.tsv  programs_Mississippi.tsv  programs_Missouri.tsv  programs_Montana.tsv  programs_Nebraska.tsv  programs_New Mexico.tsv  programs_North Dakota.tsv  programs_Oklahoma.tsv  programs_Oregon.tsv  programs_Pennsylvania.tsv  programs_Rhode Island.tsv  programs_Tennessee.tsv  programs_Virginia.tsv  programs_West Virginia.tsv
spending/: year_Alaska.tsv  (+50 more)
(+232 files in other folders)
