[package]
name = "LivestockSubsidyScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
regex = "1.7.1"
